# scoutly

./: .gitignore  MODEL.md  PRD.md  README.md  app.py  main.py  pyproject.toml
utils/: ai.py  models.py  scraper.py  search.py
