[project]
name = "scoutly"
version = "0.1.0"
description = "A web scraping tool that searches for queries using DuckDuckGo and scrapes the resulting pages for text content."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "selectolax>=0.4.0",
    "snscrape>=0.7.0.20230622",
    "docling>=2.0.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "faiss-cpu>=1.7.0",
    "ollama>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scoutly"]
