[project]
name = "scoutly"
version = "0.1.0"
description = "AI-powered Research Assistant with RAG - Search the web, scrape content, and get AI-generated answers with source attribution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.7.0",
    "streamlit>=1.54.0",
    "trafilatura>=2.0.0",
]
